# fastpack

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
benchmarks/: compare.py
fastpack/: __init__.py  core.py  stream.py
src/: _fastpack.c
tests/: test_stream.py
