[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpack"
version = "0.6.0"
description = "A fast binary serialization library for Python with optional C extension"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Niler Barcelos" }
]
keywords = ["serialization", "binary", "msgpack", "pack", "unpack", "performance", "pybyteswriter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
dev = ["pytest", "build"]

[project.urls]
Homepage = "https://github.com/nilerbarcelos/fastpack"
Repository = "https://github.com/nilerbarcelos/fastpack"

[tool.setuptools]
packages = ["fastpack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
